# Act1-XX-2025

./: .gitignore  README.md  pyproject.toml
src/xarxes2025/: cli.py  client.py  clienthandler.py  helpers.py  server.py  session.py  udpdatagram.py  videoprocessor.py
